--- a/src/app/explorar/explorar.page.html
+++ b/src/app/explorar/explorar.page.html
@@ -1,17 +1,27 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Explorar
-    </ion-title>
+    <ion-title>Explorar</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Explorar</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-md="6" *ngFor="let paquete of paquetes">
+        <ion-card>
+          <img [src]="paquete.imagenes[0]" alt="Imagen del paquete" />
+          <ion-card-header>
+            <ion-card-title>{{ paquete.nombre }}</ion-card-title>
+            <ion-card-subtitle>{{ paquete.ubicacion }}</ion-card-subtitle>
+          </ion-card-header>
+          <ion-card-content>
+            <p>{{ paquete.descripcion }}</p>
+            <p><strong>Precio:</strong> ${{ paquete.precio }}</p>
+            <ion-button size="small" color="primary">Ver más</ion-button>
+            <ion-button size="small" fill="outline" color="success">Reservar</ion-button>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
