reservas implementadas exitosamente

--- a/src/app/explorar/explorar.page.html
+++ b/src/app/explorar/explorar.page.html
@@ -18,7 +18,13 @@
             <p>{{ paquete.descripcion }}</p>
             <p><strong>Precio:</strong> ${{ paquete.precio }}</p>
             <ion-button [routerLink]="['/tabs/paquete', paquete._id]">Ver más</ion-button>
-            <ion-button size="small" fill="outline" color="success">Reservar</ion-button>
+            <ion-button 
+              size="small" 
+              fill="outline" 
+              color="success"
+              [routerLink]="['/tabs/reservas', paquete._id]">
+              Reservar
+            </ion-button>
           </ion-card-content>
         </ion-card>
       </ion-col>
