frontend y register adaptados a produccion

--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,57 +1,64 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Registro</ion-title>
+    <ion-title>Crear una cuenta</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
   <form (submit)="registrar()">
-    <ion-item>
-      <ion-label position="floating">Nombre</ion-label>
-      <ion-input [(ngModel)]="nombre" name="nombre" required></ion-input>
-    </ion-item>
+    <ion-list lines="inset">
+      <ion-item>
+        <ion-label position="floating">Nombre</ion-label>
+        <ion-input [(ngModel)]="nombre" name="nombre" required></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label position="floating">Apellido</ion-label>
-      <ion-input [(ngModel)]="apellido" name="apellido" required></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label position="floating">Apellido</ion-label>
+        <ion-input [(ngModel)]="apellido" name="apellido" required></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label position="floating">Número</ion-label>
-      <ion-input type="tel" [(ngModel)]="numero" name="numero" required></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label position="floating">Número</ion-label>
+        <ion-input type="tel" [(ngModel)]="numero" name="numero" required></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label position="floating">Correo electrónico</ion-label>
-      <ion-input type="email" [(ngModel)]="email" name="email" required></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label position="floating">Correo electrónico</ion-label>
+        <ion-input type="email" [(ngModel)]="email" name="email" required></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label position="floating">Contraseña</ion-label>
-      <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label position="floating">Contraseña</ion-label>
+        <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input>
+      </ion-item>
+    </ion-list>
 
-    <!-- Selector de imagen de perfil -->
+    <!-- Imagen de perfil -->
     <div class="ion-text-center ion-margin-top">
-      <ion-avatar *ngIf="imagenPreview" class="ion-margin-bottom">
+      <ion-avatar *ngIf="imagenPreview" class="ion-margin-bottom" style="margin: auto;">
         <img [src]="imagenPreview" alt="Foto de perfil" />
       </ion-avatar>
-
-      <ion-button expand="block" (click)="seleccionarFoto()">Seleccionar foto de perfil</ion-button>
+      <ion-button expand="block" fill="outline" (click)="seleccionarFoto()">
+        Seleccionar foto de perfil
+      </ion-button>
     </div>
 
-    <!-- Checkbox de términos -->
+    <!-- Términos -->
     <ion-item lines="none" class="ion-margin-top">
       <ion-checkbox slot="start" [(ngModel)]="acepta_terminos" name="terminos"></ion-checkbox>
       <ion-label class="ion-text-wrap">
-        Acepto los 
+        Acepto los
         <a (click)="irATerminos()" style="color: var(--ion-color-primary); text-decoration: underline;">
           términos y condiciones
         </a>
       </ion-label>
     </ion-item>
 
-    <ion-button expand="block" type="submit" class="ion-margin-top">Registrarme</ion-button>
+    <!-- Botones -->
+    <ion-button expand="block" type="submit" class="ion-margin-top">
+      Registrarme
+    </ion-button>
+
     <ion-button expand="block" fill="clear" routerLink="/login">
       Ya tengo una cuenta
     </ion-button>
