--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,25 +1,32 @@
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>Iniciar Sesión</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content class="ion-padding">
   <ion-card>
     <ion-card-header>
       <ion-card-title>Iniciar Sesión</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <form (ngSubmit)="login()">
-        <ion-item>
-          <ion-label position="floating">Correo electrónico</ion-label>
-          <ion-input type="email" [(ngModel)]="email" name="email" required></ion-input>
-        </ion-item>
+      <form (ngSubmit)="login()" #loginForm="ngForm">
+        <ion-list lines="inset">
+          <ion-item>
+            <ion-label position="floating">Correo</ion-label>
+            <ion-input type="email" name="email" [(ngModel)]="email" required></ion-input>
+          </ion-item>
 
-        <ion-item>
-          <ion-label position="floating">Contraseña</ion-label>
-          <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input>
-        </ion-item>
+          <ion-item>
+            <ion-label position="floating">Contraseña</ion-label>
+            <ion-input type="password" name="password" [(ngModel)]="password" required></ion-input>
+          </ion-item>
+        </ion-list>
 
         <ion-button expand="block" type="submit">Iniciar Sesión</ion-button>
+        <ion-button expand="block" fill="clear" routerLink="/register">Registrarse</ion-button>
+        <ion-button expand="block" fill="outline" (click)="entrarComoInvitado()">Invitado</ion-button>
       </form>
-
-      <ion-button expand="block" fill="clear" routerLink="/register">Registrarse</ion-button>
-      <ion-button expand="block" fill="outline" (click)="entrarComoInvitado()">Entrar como invitado</ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
