--- a/src/app/tabs-admin/tabs-admin.page.html
+++ b/src/app/tabs-admin/tabs-admin.page.html
@@ -1,8 +1,14 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
+
     <ion-tab-button tab="crear-paquete">
       <ion-icon name="add-circle"></ion-icon>
       <ion-label>Crear Paquete</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="paquetes">
+      <ion-icon name="albums"></ion-icon>
+      <ion-label>Paquetes</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="usuarios">
@@ -19,5 +25,11 @@
       <ion-icon name="bar-chart"></ion-icon>
       <ion-label>Estadísticas</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="perfil">
+      <ion-icon name="person-circle"></ion-icon>
+      <ion-label>Perfil</ion-label>
+    </ion-tab-button>
+
   </ion-tab-bar>
 </ion-tabs>
