--- a/src/app/tabs-admin/tabs-admin.page.html
+++ b/src/app/tabs-admin/tabs-admin.page.html
@@ -1,6 +1,18 @@
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>Panel Admin</ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button (click)="abrirPopover($event)">
+        <ion-icon name="person-circle-outline" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-
     <ion-tab-button tab="crear-paquete">
       <ion-icon name="add-circle"></ion-icon>
       <ion-label>Crear Paquete</ion-label>
@@ -30,6 +42,5 @@
       <ion-icon name="person-circle"></ion-icon>
       <ion-label>Perfil</ion-label>
     </ion-tab-button>
-
   </ion-tab-bar>
 </ion-tabs>
