--- a/src/app/planificador/planificador.page.html
+++ b/src/app/planificador/planificador.page.html
@@ -35,7 +35,7 @@
           <ion-label position="stacked">Clase</ion-label>
           <ion-select [(ngModel)]="clase">
             <ion-select-option value="economica">Económica</ion-select-option>
-            <ion-select-option value="ejecutiva">Ejecutiva</ion-select-option>
+            <ion-select-option value="premium">Premium</ion-select-option>
           </ion-select>
         </ion-item>
 
